feat: rfqj-cli doc

--- a/home/index.html
+++ b/home/index.html
@@ -974,7 +974,7 @@
                         </li>
                     </ul>
                     <p class="copyright text-muted"> Copyright ©
-                        <a href="https://www.hnrfqj.com" target="_blank">hnrfqj.com</a> 2018. </p>
+                        <a href="https://www.hnrfqj.com" target="_blank">hnrfqj.com</a> 2018-present. </p>
                 </div>
             </div>
         </div>
